fix(): Added favicon and fixed table word wrap

--- a/component/src/styles.css
+++ b/component/src/styles.css
@@ -19,6 +19,11 @@
 
 :global(.LM-table) {
   display: table;
+  table-layout: fixed;
+}
+
+:global(.LM-table tr) {
+  overflow-wrap: break-word;
 }
 
 textarea {
